--- a/modules/i18n/i18n-editor.html
+++ b/modules/i18n/i18n-editor.html
@@ -5,10 +5,10 @@
 		<script type="text/javascript">Element.prototype.animate = null;</script>
 	  	<!--script src="../components/webcomponentsjs/webcomponents.js"></script>
 	  	<script src="../components/web-animations-js/web-animations.min.js"></script-->
-	  	<script src="../scripts/jquery-3.1.1.min.js"></script>
-	  	<script src="../scripts/i18n.js"></script>
+	  	<script src="../../resources/scripts/jquery-3.1.1.min.js"></script>
+	  	<script src="./scripts/i18n.js"></script>
 	  	<script src="../../node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
-	  	<script type="module" src="i18n.js"></script>
+	  	<script type="module" src="i18n-app.js"></script>
 	  	<style type="text/css">
 	  	body{margin:0px;padding:0px;}
 	  	</style>
